<resources>
    <string name="app_name">FIndZhongFei_Final</string>
    <string name="bannerAdUnitId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_settings">Settings</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_regular">sans-serif-regular</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="companyTypePrompt">Choose your favoriteCompany type</string>
    <string-array name="companyTypeArrays">
        <item>Aerospace industry</item>
        <item>Agriculture</item>
        <item>Chemical industry</item>
        <item>Computer industry</item>
        <item>Construction industry</item>
        <item>Defense industry</item>
        <item>Education industry</item>
        <item>Energy industry</item>
        <item>Entertainment industry</item>
        <item>Financial services industry</item>
        <item>Food industry</item>
        <item>Health care industry</item>
        <item>Hospitality industry</item>
        <item>Information industry</item>
        <item>Manufacturing</item>
        <item>Mass media</item>
        <item>Mining</item>
        <item>Telecommunications industry</item>
        <item>Transport industry</item>
        <item>Water industry</item>
        <item>Direct Selling industry</item>
        <item>Other</item>
    </string-array>
    <string-array name="subTypesAgriculture">
        <item>Fishing industry</item>
        <item>Timber industry</item>
        <item>Tobacco industry</item>
    </string-array>
    <string-array name="subTypesChemical">
        <item>Pharmaceutical industry</item>
    </string-array>
    <string-array name="subTypesComputer">
        <item>Software industry</item>
    </string-array>
    <string-array name="subTypesDefense">
        <item>Arms industry</item>
    </string-array>
    <string-array name="subTypesEnergy">
        <item>Electrical power industry</item>
        <item>Petroleum industry</item>
    </string-array>
    <string-array name="subTypesFinancial">
        <item>Insurance industry</item>
    </string-array>
    <string-array name="subTypesFood">
        <item>Fruit production</item>
    </string-array>
    <string-array name="subTypesManufacturing">
        <item>Automotive industry</item>
        <item>Electronics industry</item>
        <item>Pulp and paper industry</item>
        <item>Steel industry</item>
        <item>Shipbuilding industry</item>
    </string-array>
    <string-array name="subTypesMedia">
        <item>Broadcasting</item>
        <item>Film industry</item>
        <item>Music industry</item>
        <item>News media</item>
        <item>Publishing</item>
        <item>World Wide Web</item>
    </string-array>
    <string-array name="subTypesTelecommunications">
        <item>Internet</item>
    </string-array>
    <string-array name="subTypesOther">
        <item>Other</item>
    </string-array>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="error_comp_fill_in_all_fields">Please fill in all the fields first</string>
    <string name="email_error">Please enter valid email address</string>
    <string name="email_empty_error">Email address can not be empty</string>
    <string name="phone_error">Please enter valid phone number</string>
    <string name="company_phone_empty_error">Please provide your favoriteCompany phone number</string>
    <string name="password_weak_error">Password must contain at least one of these !,@,#,$ characters</string>
    <string name="password_invalid_characters_error">Invalid password, please use uppercase lowercase characters</string>
    <string name="password_short_error">Password can not be less than 8 characters long</string>
    <string name="password_long_error">Password can not be more than 24 characters long</string>
    <string name="password_empty_error">Password can not be empty</string>
    <string name="username_empty_error">Username can not be empty</string>
    <string name="username_error">Please enter valid username</string>
    <string name="company_profile_image_error">Please provide favoriteCompany profile image</string>
    <string name="license_image_error">Please provide favoriteCompany license image</string>
    <string name="login">Login</string>
    <string name="browse">Browse</string>
    <string name="filter">Filter</string>
    <string name="register">Register</string>
    <string name="guest">Continue as a guest</string>
    <string name="next">Next</string>
    <string name="back">Back Button</string>
    <string name="go">Go</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="logo">Logo</string>
    <string name="close">Close</string>
    <string name="more">More</string>
    <string name="search_hint">Search by favoriteCompany name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="contacts">Contacts</string>
    <string name="favorites">Favorites</string>
    <string name="privacy">Privacy</string>
    <string name="purchases">Purchases</string>
    <string name="history">History (%1$s)</string>
    <string name="companyPhoto">Company Photo</string>
    <string name="near">Companies near my location</string>
    <string name="settingsTitle">Settings</string>
    <string name="language">Language</string>
    <string name="languageValue">English</string>
    <string name="changePassword">Change Password</string>
    <string name="version">Version</string>
    <string name="versionNumber">1.0.0</string>
    <string name="update">Update</string>
    <string name="rateApp">Rate App</string>
    <string name="about">About</string>
    <string name="profileTitle">Profile</string>
    <string name="signOut">Sign Out</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="backgroundPicture">Background Picture</string>
    <string name="username">Name</string>
    <string name="usernameValue">Neud Tesfay</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phoneNumberValue">+86 132 3657 ****</string>
    <string name="emailAddress">Email</string>
    <string name="emailAddressValue">kingneud55@gmail.com</string>
    <string name="region">Region</string>
    <string name="location">Location</string>
    <string name="regionValue">Ethiopia</string>
    <string name="address">Address</string>
    <string name="addressValue">Addis Ababa</string>
    <string name="qrCodeText">QR Code</string>
    <string name="registered">REGISTERED</string>
    <string name="showProfile">Go to favoriteCompany profile</string>
    <string name="compName">Company Name</string>
    <string name="ceo">Company CEO</string>
    <string name="representative">Representative Name</string>
    <string name="license">License: </string>
    <string name="logoText">Company Profile </string>
    <string name="repEmail">Representative Email</string>
    <string name="compPhone">Company Phone</string>
    <string name="compEmail">Company Email</string>
    <string name="add1">Address 1</string>
    <string name="add2">Address 2</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="compType">Company Type</string>
    <string name="compTypeOther">Specify Type</string>
    <string name="compSubType">Company Subtype</string>
    <string name="compSubTypeOther">Specify Subtype</string>
    <string name="compSubTypeShort">Subtype</string>
    <string name="description">Company Description</string>
    <string name="descriptionShort">Description</string>
    <string name="wechatId">Wechat Id</string>
    <string name="qrCode">QR Code</string>
    <string name="compNameValue">Amazon</string>
    <string name="university">University</string>
    <string name="universityNameValue">Nanjing University of Aeronautics and Astronautics</string>
    <string name="universityDescValue">#1 Aeronautics university in china</string>
    <string name="ceoValue">Zheng Hua</string>
    <string name="representativeValue">Wang Zhi kai</string>
    <string name="repEmailValue">repemial@qq.com</string>
    <string name="compPhoneValue">+132 3657 65**</string>
    <string name="compEmailValue">amazon@yahoo.com</string>
    <string name="add1Value">Nanjing Shengtai West Road 119</string>
    <string name="add2Value">Zhujianlu metro station exit 3</string>
    <string name="cityValue">Nanjing</string>
    <string name="provinceValue">Jiangsu</string>
    <string name="compTypeValue">Manufacturing</string>
    <string name="compSubTypeValue">Car Parts</string>
    <string name="descriptionValue">Our favoriteCompany sells car parts to .....</string>
    <string name="wechatIdValue">wang15563245</string>
    <string name="addCompanyPhoto">&#x2b; Add company photo</string>
    <string name="addLicensePhoto">&#x2b; Add license photo</string>
    <string name="userEmail">Email Address</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="regLongTxt">Congratulations You have successfully submitted your form. Your favoriteCompany profile details are under evaluation we will check and notify you on your email address this might take 2 &#8211; 3 days. Thank you!</string>
    <string name="notAUserRegisterTxt">Don\&apos;t have an account yet? REGISTER HERE</string>
    <string name="userLoginTxt">Already have an account? LOG IN HERE</string>
    <string name="emailOrPhoneNumber">Email or Phone Number</string>
    <string name="pressTwiceToExit">Press again to exit app</string>
    <string name="title_activity_settings">Settings</string>
    <string name="userSelectInterests">Please Select your business interests</string>
    <string name="userSelectSubInterests">Which business types do you want to see more often</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
</resources>