<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cdlProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".activity.CompanyProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:contentDescription="@string/backgroundPicture"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/coverimage"
            app:titleEnabled="false"
            app:contentScrim="@drawable/shadow"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <android.support.v7.widget.Toolbar
                android:id="@+id/profile_toolbar"
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:paddingTop="25sp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15sp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:targetApi="o">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewCompName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/compNameValue"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/compTypeAndSubTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/compTypeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/compType"/>

                    <TextView
                        android:id="@+id/TextViewCompType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/compTypeValue"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/compSubTypeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxEms="12"
                        android:singleLine="true"
                        android:text="@string/compSubType"/>

                    <TextView
                        android:id="@+id/TextViewCompSubType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/compSubTypeValue"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10sp"
                android:background="@color/light_gray"
                tools:ignore="SmallSp"/>

            <LinearLayout
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/provinceTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/province"/>

                    <TextView
                        android:id="@+id/TextViewProvince"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/provinceValue"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"/>

                    <TextView
                        android:id="@+id/TextViewCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/cityValue"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="15sp"
                android:background="@color/light_gray"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/compPhoneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compPhone"/>

            <TextView
                android:id="@+id/TextViewCompPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/compPhoneValue"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="15sp"
                android:background="@color/light_gray"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/compEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compEmail"/>

            <TextView
                android:id="@+id/TextViewCompEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/compEmailValue"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="15sp"
                android:background="@color/light_gray"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/ceoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ceo"/>

            <TextView
                android:id="@+id/TextViewCeo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/ceoValue"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="15sp"
                android:background="@color/light_gray"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/representativeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/representative"/>

            <TextView
                android:id="@+id/TextViewRepresentative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/representativeValue"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="15sp"
                android:background="@color/light_gray"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/repEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repEmail"/>

            <TextView
                android:id="@+id/TextViewRepEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/repEmailValue"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="15sp"
                android:background="@color/light_gray"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/address1Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add1"/>

            <TextView
                android:id="@+id/TextViewAddress1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add1Value"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="15sp"
                android:background="@color/light_gray"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/address2Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add2"/>

            <TextView
                android:id="@+id/TextViewAddress2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="15sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add2Value"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>